Prevent awkward line breaks on phones

--- a/static/styles/theme-default.css
+++ b/static/styles/theme-default.css
@@ -45,6 +45,7 @@ label {
   flex: 1 0 25%;
   font-size: 1.5rem;
   position: relative;
+  white-space: pre;
 }
 
 input[type=checkbox] {
